--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     ],
     "plugins": {
       "cordova-plugin-camera": {},
-      "cordova-plugin-advanced-http": {
-        "ANDROIDBLACKLISTSECURESOCKETPROTOCOLS": "SSLv3,TLSv1"
-      }
+      "cordova-plugin-advanced-http": {}
     }
+  },
+  "dependencies": {
+    "pizzaria.admin": "file:"
   }
 }
